<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="8dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    android:id="@+id/cardview"
    card_view:cardBackgroundColor="@color/dark"
    android:background="@color/dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/thumbnail"
            android:background="@color/dark"
            android:layout_width="match_parent"
            android:contentDescription="@string/imageview_recicler_view"
            android:layout_height="250dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/author"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/author_a"
            android:textColor="#F5F5F5"
            android:paddingTop="16dp"
            android:background="@color/dark"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/content"
            android:background="@color/dark"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textColor="#9E9E9E"
            android:maxLines="2"
            android:text="@string/content_a"
            android:ellipsize="end"
            android:typeface="sans"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
